Gestion de persistence d'alerte fermée

--- a/public/index.html
+++ b/public/index.html
@@ -933,7 +933,7 @@
       <td>persistence-key</td>
       <td>Chaîne de caractère</td>
       <td>Id de l'élément, valeur nulle sinon</td>
-      <td>Clé pour le stockage locale (<code>Window.localStorage</code>). Si non défini, l'id de l'élément sera utilisé. Si celui-ci non plus n'est pas défini, la persistence du masquage n'aura pas lieu.</td>
+      <td>Clé pour le stockage de session (<code>Window.sessionStorage</code>). Si non défini, l'id de l'élément sera utilisé. Si celui-ci non plus n'est pas défini, la persistence du masquage n'aura pas lieu.</td>
     </tr>
 
   </table>
