Doc - ajustement d'une aide pour l'alerte

--- a/public/index.html
+++ b/public/index.html
@@ -917,7 +917,7 @@
           <td>persist-hidden</td>
           <td>na</td>
           <td></td>
-          <td>Masque l'alerte de façon persistente une fois qu'elle est masquée par l'internaute, c-à-d. qu'elle reste masquée lorsque l'utilisateur rafraîchit la page.</td>
+          <td>Masque l'alerte de façon persistente une fois qu'elle est masquée par l'internaute, c‑à‑d. qu'elle reste masquée lorsque l'utilisateur rafraîchit la page, pendant tout le temps de sa session.</td>
       </tr>
     <tr>
       <td>persistence-key</td>
