Ajout de invalidOnblur sur qc-textfield

--- a/public/index.html
+++ b/public/index.html
@@ -2132,6 +2132,12 @@
       <td>aucune</td>
       <td>Message d'erreur personnalisé affiché lorsque le champ est invalide</td>
     </tr>
+    <tr>
+        <td>invalid-on-blur</td>
+        <td>na</td>
+        <td>na</td>
+        <td>Active la validation de la case à cocher sur un changement de focus</td>
+    </tr>
     </tbody>
   </table>
 </div>
@@ -2607,6 +2613,12 @@
             <td>Texte</td>
             <td>Le champ (libellé du champ) est obligatoire. / (libellé du champ) field is required.</td>
             <td>Message d’erreur à afficher lorsque la liste déroulante est invalide</td>
+        </tr>
+        <tr>
+            <td>invalid-on-blur</td>
+            <td>na</td>
+            <td>na</td>
+            <td>Active la validation de la case à cocher sur un changement de focus</td>
         </tr>
         <tr>
             <td>placeholder</td>
