--- a/public/index.html
+++ b/public/index.html
@@ -1697,6 +1697,12 @@
       <td>Message d’erreur à afficher lorsque le groupe est invalide.</td>
     </tr>
     <tr>
+        <td>invalid-on-blur</td>
+        <td>na</td>
+        <td>na</td>
+        <td>Vérifie qu'au moins une option est sélectionnée lors d'une perte de focus</td>
+    </tr>
+    <tr>
       <td>selection-button</td>
       <td>na</td>
       <td>na</td>
@@ -1812,7 +1818,7 @@
         <td>invalid-on-blur</td>
         <td>na</td>
         <td>na</td>
-        <td>Active la validation de la case à cocher sur un changement de focus</td>
+        <td>Vérifie que la case est cochée lors d'une perte de focus</td>
     </tr>
     </tbody>
   </table>
@@ -2136,7 +2142,7 @@
         <td>invalid-on-blur</td>
         <td>na</td>
         <td>na</td>
-        <td>Active la validation de la case à cocher sur un changement de focus</td>
+        <td>Vérifie la présence de donnée saisie lors d'une perte de focus</td>
     </tr>
     </tbody>
   </table>
@@ -2618,7 +2624,7 @@
             <td>invalid-on-blur</td>
             <td>na</td>
             <td>na</td>
-            <td>Active la validation de la case à cocher sur un changement de focus</td>
+            <td>Vérifie la présence d'une donnée dans <code>value</code> lors d'une perte de focus</td>
         </tr>
         <tr>
             <td>placeholder</td>
