Doc - mise à jour de la doc des liens

--- a/public/index.html
+++ b/public/index.html
@@ -599,7 +599,7 @@
     <h2 id="liens">Liens</h2>
 <qc-doc-exemple caption="Exemple de différents liens hypertexte selon leurs états.">
     <dl>
-        <dt>Lien interne</dt>
+        <dt>Lien non visité</dt>
         <dd><a href="#" class="not-visited">Lien interne</a></dd>
         <dd>
             <qc-external-link><a href="#" class="not-visited">Lien externe</a></qc-external-link>
