--- a/public/index.html
+++ b/public/index.html
@@ -1168,6 +1168,14 @@
   </qc-textfield>
 </qc-doc-exemple>
 
+<h4>Ajout d’un titre</h4>
+<qc-doc-exemple id="alert-general"
+                caption="Exemple d'infobulle placée dans un libellé de champ texte">
+
+    <p><qc-tooltip text="Lorem" title="Lorem ipsum dolor" description-id="tooltip-1" icon="information">ipsum dolor</qc-tooltip></p>
+
+</qc-doc-exemple>
+
 <h3>Documentation technique</h3>
 
 <h4>Attributs</h4>
@@ -1186,6 +1194,12 @@
       <td>Texte</td>
       <td>Chaine vide</td>
       <td>Texte lié à l'infobulle</td>
+    </tr>
+    <tr>
+      <td>Title</td>
+      <td>Texte</td>
+      <td>Chaine vide</td>
+      <td>Titre de l'infobulle</td>
     </tr>
     <tr>
       <td>description</td>
