Doc - remplacement des titres de section par des titres de tableau

--- a/public/index.html
+++ b/public/index.html
@@ -384,9 +384,11 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
-<div class="table-overflow">
+
+<div class="table-overflow" id="exemple-caption">
+
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Attributs</caption>
         <thead>
         <tr>
             <th>Nom</th>
@@ -448,10 +450,9 @@
     </table>
 </div>
 
-<h4>Liste des icônes</h4>
-
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Liste des icônes</caption>
         <thead>
         <tr>
             <th>Nom</th>
@@ -683,9 +684,9 @@
 
 </qc-doc-exemple>
 
-<h4>Attributs</h4>
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Attributs</caption>
         <thead>
         <tr>
             <th>Nom</th>
@@ -881,9 +882,9 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -1048,9 +1049,10 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -1178,9 +1180,10 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -1305,9 +1308,9 @@
 </qc-doc-exemple>
 
 
-<h3>Attributs</h3>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -1510,9 +1513,10 @@
 
 <h3>Classes CSS</h3>
 
-<h4>Classes de boutons</h4>
+
 <div class="table-overflow">
     <table class="qc-table qc-striped">
+        <caption>Classes de boutons</caption>
         <thead>
         <tr>
             <th>Classe / Attribut</th>
@@ -1556,9 +1560,10 @@
     </table>
 </div>
 
-<h4>Classes pour le contenant parent d'un groupe de boutons</h4>
+
 <div class="table-overflow">
     <table class="qc-table qc-striped">
+        <caption>Classes pour le contenant parent d'un groupe de boutons</caption>
         <thead>
         <tr>
             <th>Classe / Attribut</th>
@@ -1784,10 +1789,9 @@
 </qc-doc-exemple>
 
 
-<h5 id="choice-group-doc">Attributs de qc-choice-group</h5>
-
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption id="choice-group-doc">Attributs de qc-choice-group</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -1909,9 +1913,10 @@
 </qc-doc-exemple>
 
 
-<h4>Attributs de qc-checkbox</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs de qc-checkbox</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -2201,9 +2206,9 @@
 
 <h4>Documentation technique</h4>
 
-<h4>Attributs</h4>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -2270,9 +2275,10 @@
   </table>
 </div>
 
-<h4>Propriété js</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Propriété js</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -2345,9 +2351,9 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Attributs</caption>
         <thead>
         <tr>
             <th>Nom</th>
@@ -2469,9 +2475,9 @@
 
 <h4>Documentation technique</h4>
 
-<h5>Attributs de <code>qc-toggle-switch</code></h5>
+
 <table class="qc-table qc-striped component-attributes-description">
-    <thead>
+    <caption>Attributs de <code>qc-toggle-switch</code></caption>    <thead>
     <tr>
         <th>Nom</th>
         <th>Valeur attendue</th>
@@ -2515,8 +2521,9 @@
     </tbody>
 </table>
 
-<h5>Attributs de <code>qc-toggle-switch-group</code></h5>
+
 <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs de <code>qc-toggle-switch-group</code></caption>
     <thead>
     <tr>
         <th>Nom</th>
@@ -2669,9 +2676,10 @@
 
 <h4>Documentation technique</h4>
 
-<h5>Attributs</h5>
+
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Attributs</caption>
         <thead>
         <tr>
             <th>Nom</th>
@@ -2777,10 +2785,11 @@
     </table>
 </div>
 
-<h5>Propriété JS</h5>
+
 
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Propriété JS</caption>
         <thead>
             <tr>
                 <th>Nom</th>
@@ -2942,9 +2951,10 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -3035,9 +3045,9 @@
 
 
 <h3>Documentation technique</h3>
-<h4>Attributs</h4>
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
@@ -3243,9 +3253,10 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
+
 <div class="table-overflow">
   <table class="qc-table qc-striped component-attributes-description">
+    <caption>Attributs</caption>
     <thead>
     <tr>
       <th>Nom</th>
