--- a/src/sdg/bases/Icon/_icon.html
+++ b/src/sdg/bases/Icon/_icon.html
@@ -41,9 +41,11 @@
 
 <h3>Documentation technique</h3>
 
-<h4>Attributs</h4>
-<div class="table-overflow">
+
+<div class="table-overflow" id="exemple-caption">
+
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Attributs</caption>
         <thead>
         <tr>
             <th>Nom</th>
@@ -105,10 +107,9 @@
     </table>
 </div>
 
-<h4>Liste des icônes</h4>
-
 <div class="table-overflow">
     <table class="qc-table qc-striped component-attributes-description">
+        <caption>Liste des icônes</caption>
         <thead>
         <tr>
             <th>Nom</th>
